--- a/Tags/ExtractingKeywords.ipynb
+++ b/Tags/ExtractingKeywords.ipynb
@@ -49,7 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#open udemy3.csv and read the description column\n",
+    "# Abre el documento que contiene la descripcion de los cursos, genera las etiquetas con el modelo de extracción de palabras KeyBert y crea un archivo \n",
+    "# con el id del curso y las etiquetas generadas\n",
     "with open('udemy3.csv', 'r', encoding='utf-8') as f:\n",
     "    for line in f:\n",
     "        line = line.split(\"|\")\n",
